# Offensive-TradeCraft

./: README.md
Access Tokens/Enumeration/: Cargo.toml  enableallprivileges.rs  getallprochandles.rs  getalltokenhandles.rs  getlogonsessions.rs  getprocesses.rs  gettokengroupinfo.rs  gettokenimpersonationlevel.rs  gettokenintegritylevel.rs  gettokenownerinfo.rs  gettokenprivilegeinfo.rs  gettokenuserinfo.rs  getvulnprochandles.rs  isimpersonatedtoken.rs
Access Tokens/Token Theft Auto/: duplicatetokenandspawn.rs  getvulnerableprochandles.rs  impersonateuser.rs
Active Directory/: decodeuac.cs  find-psremoting.cs  get-asreproastable.cs  get-constrained.cs  get-dcsync.cs  get-kerberoastable.cs  get-rbcd.cs  get-unconstrained.cs  ps1loader.cs
Active Directory/Kerberos/: Cargo.toml  createkerbs4ulogon.rs  getcachedtickets.rs  getkerbs4ulogontcbprivilege.rs  getticket.rs  kerbinteractivelogon.rs  msv1_0auth.rs
Malware Development/: bruteforcing_syscalls.rs
Malware Development/Hell's Gate/: main.rs  process.rs
Malware Development/Injections/: fibers.rs
Processes/: Cargo.toml  amsipatch.rs  getimagebaseaddress.rs  getloadedmodules.rs  getpebaddress.rs  getprocesses.rs  getprocessnamefromid.rs  isbeingdebugged.rs  peparser.rs
Win32 Shellcoding/: CreateProcessA.asm  MessageBoxA.asm  ReverseShell.asm  getntdllbaseaddress.asm  getntdllfunctionaddress.asm
Win32 Shellcoding/myfunctions/: comparetwostrings.asm  echo client.asm  getexportedfunction.asm
useful snippets/: RemoteParse.rs  getprocessbaseaddress.rs  largeintegertosystemtime.rs  rvatooffset.rs
(+7 files in other folders)
