[package]
name = "tokens"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = {version = "0.3.9",features = [
    "processthreadsapi","memoryapi","errhandlingapi","handleapi",
    "securitybaseapi","sddl","winbase","winnt","ntlsa","synchapi",
    "tlhelp32","winerror","memoryapi"
    
]}
ntapi = "0.4.1"
itertools = "0.12.0"
